# serializer version: 1
# name: test_containers_codegen
  '''
  @startuml
  !include <C4/C4_Container>
  System_Boundary(Blogging_System,"Blogging System"){
      Container(Frontend_Service, "Frontend Service", "UI",$tags="")
      Container(Backend_Service, "Backend Service", "Provides API\nMaybe split into microservices later",$tags="")
      Container(DB_Service, "DB Service", "",$tags="")
  }
  
  System_Boundary(Metrics_System,"Metrics System"){
      Container_Ext(Metrics_Service, "Metrics Service", "",$tags="")
  }
  
  Person(User, "User", "Uses blogging app. Reads and creates posts",$tags="")
  
  Person(Admin, "Admin", "Blog moderator",$tags="")
  
  Rel(Frontend_Service, Backend_Service, "Send API requests","HTTP")
  
  Rel(User, Frontend_Service, "","")
  
  Rel(Admin, Frontend_Service, "","")
  
  Rel(Backend_Service, Metrics_Service, "Send metrics info on each request","HTTP")
  
  Rel(Backend_Service, DB_Service, "Stores info","")
  @enduml
  
  '''
# ---
# name: test_context_codegen
  '''
  @startuml
  !include <C4/C4_Context>
  Person(User, "User", "Uses blogging app. Reads and creates posts",$tags="")
  
  Person(Admin, "Admin", "Blog moderator",$tags="")
  
  System(Blogging_System, "Blogging System", "Stores and manages blogs",$tags="")
  
  System_Ext(Metrics_System, "Metrics System", "Collects site metrics\nWe will use Yandex Metrics",$tags="")
  
  Rel(User, Blogging_System, "Uses","")
  
  Rel(Admin, Blogging_System, "Uses","")
  
  Rel(Admin, Metrics_System, "Reviews post metrics","")
  
  Rel(Blogging_System, Metrics_System, "","")
  @enduml
  
  '''
# ---
# name: test_deployment_codegen
  '''
  @startuml
  !include <C4/C4_Deployment>
  Boundary(VPS_Deployment,"VPS Deployment",$descr="Docker containers with Docker compose"){
      Boundary(Docker_compose,"Docker compose",$descr=""){
          Node(Frontend_Service,"Frontend Service",$descr="Docker container")
          Node(Backend_Service,"Backend Service",$descr="Docker container")
          Node(DB_Service,"DB Service",$descr="Docker container")
      }
  }
  
  Boundary(Provided_Metrics,"Provided Metrics",$descr="Metrics Service is already provided"){
      Node(Metrics_Service,"Metrics Service",$descr="Cloud provider")
  }
  @enduml
  
  '''
# ---
# name: test_link_directions_codegen
  '''
  @startuml
  !include <C4/C4_Context>
  Person(User, "User", "",$tags="")
  
  System(System, "System", "",$tags="")
  
  Rel(User, System, "","")
  
  Rel(System, User, "","")
  
  BiRel(System, User, "","")
  
  BiRel(System, User, "","")
  @enduml
  
  '''
# ---
# name: test_name_clashes_codegen
  '''
  @startuml
  !include <C4/C4_Context>
  Person(Plus_c7da77da, "Plus+", "",$tags="")
  
  System(Plus, "Plus", "",$tags="")
  @enduml
  
  '''
# ---
